# kfffeed

./: INSTALL  README  VERSION  index.html  kfffeed.manpage.html  manpage.xhtml  netnumbers.xml  version
FritzBox/: avm_fritzbox_addressbook_schema.xsd
QtPhoneNumberString/: QtPhoneNumberString.pro  QtPhoneNumberString_global.h  qtphonenumberstring.cpp  qtphonenumberstring.h
data/: netnumbers.xml
doc/: README  avm_fritzbox_addressbook_schema.xsd  kfffeed.1  kfffeed.manpage.xml  phonenet.xsd  testnumbers.txt
kfffead/: CMakeLists.txt  fritzboxphonebook.cpp  fritzboxphonebook.h  fritzboxphonebookcontact.cpp  fritzboxphonebookcontact.h  fritzboxphonenumber.cpp  fritzboxphonenumber.h  main.cpp
src/: CMakeLists.txt  environment.cpp  environment.h  fritzboxphonebook.cpp  fritzboxphonebook.h  fritzboxphonebookcontact.cpp  fritzboxphonebookcontact.h  fritzboxphonenumber.cpp  fritzboxphonenumber.h  main.cpp  qphonenumberstring.cpp  qphonenumberstring.h
